--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <header>
       <nav>
-        <a>
-          <p>WebStudio</p>
+        <a href="./index.html">
+          WebStudio
         </a>
         <ul>
           <li><a href="">Studio</a></li>
@@ -16,13 +16,17 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+      <address>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+       <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </ul>
+    </address>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </section>
       <section>
         <h2 hidden>features</h2>
@@ -75,58 +79,49 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <figure>
+            
               <img
                 src="./images/Mark-Guerrero.jpg/"
                 alt="Product Designer-Mark-Guerrero"
                 width="264"
               />
-              <figcaption>Mark Guerrero</figcaption>
-            </figure>
+              <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <figure>
               <img
                 src="./images/Tom-Ford.jpg/"
                 alt="Frontend-Developer-Tom-Ford"
                 width="264"
               />
-              <figcaption>Tom Ford</figcaption>
-            </figure>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <figure>
               <img
                 src="./images/Camila-Garcia.jpg/"
                 alt="Marketing-Camila-Garcia"
                 width="264"
               />
-              <figcaption>Camila Garcia</figcaption> 
-            </figure>
+             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <figure>
               <img
                 src="./images/Daniel-Wilson.jpg/"
                 alt="UI-Designer-Daniel-Wilson"
                 width="264"
               />
-              <figcaption>Daniel Wilson</figcaption>
-            </figure>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <nav>
-        <a>
-          <p>WebStudio</p>
+        <a href="./index.html">
+          WebStudio 
         </a>
-      </nav>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
