--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <li>
             
               <img
-                src="./images/Mark-Guerrero.jpg/"
+                src="./images/Mark-Guerrero.jpg"
                 alt="Product Designer-Mark-Guerrero"
                 width="264"
               />
@@ -90,7 +90,7 @@
           </li>
           <li>
               <img
-                src="./images/Tom-Ford.jpg/"
+                src="./images/Tom-Ford.jpg"
                 alt="Frontend-Developer-Tom-Ford"
                 width="264"
               />
@@ -99,7 +99,7 @@
           </li>
           <li>
               <img
-                src="./images/Camila-Garcia.jpg/"
+                src="./images/Camila-Garcia.jpg"
                 alt="Marketing-Camila-Garcia"
                 width="264"
               />
@@ -108,7 +108,7 @@
           </li>
           <li>
               <img
-                src="./images/Daniel-Wilson.jpg/"
+                src="./images/Daniel-Wilson.jpg"
                 alt="UI-Designer-Daniel-Wilson"
                 width="264"
               />
